--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,16 @@
     "require": {
         "php": "^8.1",
         "elasticsearch/elasticsearch": "^8.14",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.8",
         "jeroennoten/laravel-adminlte": "^3.12",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/socialite": "^5.15",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
-        "mailersend/laravel-driver": "^2.6"
+        "mailersend/laravel-driver": "^2.6",
+        "psr/http-client": "^1.0",
+        "psr/http-message": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
