--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,33 @@
+version: '3.8'
 services:
-    web:
-        image: ubuntu:latest
-        container_name: web
-        build:
-            context: .
-            dockerfile: Dockerfile
-        ports:
-            - "80:80"
+    laravel-docker:
+        container_name: laravel-docker
+        build: .
         volumes:
             - .:/var/www/html
-        environment:
-            - COMPOSER_ALLOW_SUPERUSER=1
+        ports:
+            - 9000:80
         depends_on:
-            - db
-        command: ["php", "-S", "0.0.0.0:80", "-t", "/var/www/html/public"]
+            - mysql_db
 
-    db:
-        image: mysql:5.7
-        container_name: db
+    mysql_db:
+        image: mysql:latest
         environment:
             MYSQL_ROOT_PASSWORD: root
             MYSQL_DATABASE: real_estate_db
         ports:
-            - "3306:3306"
+            - 3306:3306
         volumes:
-            - db_data:/var/lib/mysql
+            - mysql-data:/var/lib/mysql
+
+    phpmyadmin:
+        image: phpmyadmin:latest
+        ports:
+            - 9001:80
+        environment:
+            - PMA_HOST=mysql_db
+            - PMA_PORT=3306
+            - PMA_ARBITRARY=1
 
 volumes:
-    db_data:
+    mysql-data:
